# material-data-agent

./: .env.example  .gitignore  CURRENT_PROGRESS_AND_NEXT_PLAN.md  CURRENT_RELEASE_STATUS.md  DEEPSEEK_NEXT_PLAN.md  DEEPSEEK_V4_PRO_FRONTEND_CLOSURE_PLAN.md  DEEPSEEK_V4_PRO_NEXT_ITERATION_PLAN.md  DELIVERY_PLAN.md  EXPORT_CHECK.md  FINAL_CHECK.md  FIX_PLAN.md  FRONTEND_CHECK.md  MODEL_LAYER_CHECK.md  NEXT_PLAN.md  OPENCODE_FIX_PLAN.md  OPENCODE_PLAN.md  PLAN.md  README.md  REAL_API_CHECK.md  UI_PATCH_RECHECK_PLAN.md  UI_PATCH_TEST_SCOPE_CORRECTION_PLAN.md  VALIDATION_CHECK.md  model_profiles.yaml.example  pyproject.toml
data_agent/: __init__.py  __main__.py  classify.py  cli.py  config.py  db.py  export.py  ingest.py  package.py  process.py  reports.py  reviews.py  sample_index.py  schemas.py  validation.py
docs/: data_input_contract.md  frontend_iteration_audit.md  frontend_operation_loop.md  model_service_layer.md  real_api_check_template.md  real_model_integration_audit.md  ui_walkthrough.md
marimo_apps/: task_review.py
scripts/: audit_secret_leaks.py  run_real_api_check.py
tests/: conftest.py  test_classify.py  test_cli_ui.py  test_db_package.py  test_demo_pipeline.py  test_export.py  test_model_evidence.py  test_model_profiles.py  test_model_provider_contracts.py  test_model_provider_mock.py  test_model_router.py  test_real_api_tools.py  test_review_target.py  test_sample_index.py  test_schemas.py  test_ui_app_smoke.py  test_ui_patch_recheck.py  test_ui_presentation.py  test_ui_preview.py  test_ui_readers.py  test_ui_security.py  test_ui_status.py  (+1 more)
(+26 files in other folders)
