[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_agent"
version = "0.1.0"
description = "Material R&D Data Processing Agent MVP"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Data Agent Team"}
]
dependencies = [
    "pydantic>=2.0",
    "pandas>=1.5",
    "openpyxl>=3.0",
    "numpy>=1.23",
    "matplotlib>=3.5",
    "pillow>=9.0",
    "typer>=0.9",
    "rich>=13.0",
    "marimo>=0.8",
    "PyYAML>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
